fixed the horizontal scroll

--- a/style.css
+++ b/style.css
@@ -173,19 +173,9 @@ html, body {
     color: black;
 }
 /*---------------------slideshow----------------------*/
-#imageshow {
-    max-width: 100%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    scale: 1.2;
-    height: fit-content;
-    margin-bottom: 100px;
-    margin-top: 50px;
-}
-#imageshow img{
+/* #imageshow img{
     height: 250px;
-}
+} */
 /*footer*/
 
 * {
